# cherry-soc

./: Makefile  build.sbt  readme.md
src/main/resources/: cherry-app.hex  ice-breaker.pcf
src/main/rust/cherry-app/: Cargo.toml
src/main/rust/cherry-app/src/: main.rs
src/main/rust/cherry-hal/: Cargo.toml
src/main/rust/cherry-hal/src/: gpio.rs  lib.rs  prelude.rs
src/main/rust/cherry-pac/: Cargo.toml  build.rs  cherry.svd
src/main/rust/cherry-pac/src/: lib.rs
src/main/rust/cherry-pac/src/cherry/: metadata.rs  mod.rs
src/main/rust/cherry-pac/src/cherry/instances/: gpio.rs  gpioa.rs
src/main/scala/cherry/: Bootstrap.scala
src/main/scala/cherry/soc/: Arbiter.scala  CherrySoC.scala  Config.scala  Ram.scala  SoC.scala  System.scala  Timer.scala
