[package]
name = "cherry-app"
version = "0.0.0"
authors = ["Vitaly Domnikov <oss@vitaly.codes>"]
edition = "2018"
license = "MIT/Apache-2.0"

[[bin]]
name = "cherry-app"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
cherry-hal = { path = "../cherry-hal/"}

[profile.release]
codegen-units = 1
lto = true
