[package]
name = "cherry-hal"
version = "0.0.0"
authors = ["Vitaly Domnikov <oss@vitaly.codes>"]
license = "MIT/Apache-2.0"
edition = "2018"

[lib]
test = false
bench = false

[dependencies.cherry-pac]
path = "../cherry-pac"
features = ["rt"]

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.4"
